--- a/style.css
+++ b/style.css
@@ -1,3 +1,123 @@
+@font-face {
+    font-family: Norse-bold;
+    src: url(./Norse-Bold.otf);
+}
+
+h2, h1{
+    margin:0;
+}
+html {
+    display: flex;
+    justify-content: center;
+}
 body {
     display: flex;
+    width: 1200px;
+    height: 700px;
 }
+
+
+.left {
+    background-image: url("snowboard.avif");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width:480px;
+    display: flex;
+    flex-direction: column;
+    flex-shrink:0;
+
+}
+.title {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    background-color: rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 60px;
+    position: relative;
+    top: 15%;
+    text-align: center;
+}
+.credit{
+    position: relative;
+    text-align: center;
+    top: 610px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.right {
+    width:60%;
+    background-color: rgb(250, 250, 250);   
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow:0.5px 0.5px 1px rgb(179, 179, 179);
+}
+.about, .log-in, button{
+    font-size: 18px;
+}
+.header, .collectors, .footer {
+    padding:30px 40px;
+}
+
+/* header */
+.header{
+    padding-top: 60px;
+}
+ul{
+    margin:16px 0 0;
+}
+li {
+    margin-bottom:5px;
+}
+
+
+/* collectors */
+.collectors {
+    display: flex;
+    flex-direction: column;
+    gap:15px;
+    background-color: white;
+    box-shadow: 0 5px 5px rgb(179, 179, 179);
+}
+.name, .data, .passwords{
+    display: flex;
+    gap:50px;
+}
+/* labels and inputs */
+input, label {
+    display:block;
+}
+label {
+    font-size: 10px;
+    color:rgb(46, 46, 46);
+    margin-bottom: 1px;
+}
+input{
+    border: 1px solid rgb(202, 202, 202);
+    border-radius: 3px;
+    box-shadow: 0.5px 0.5px 1px rgb(63, 63, 63);
+    padding:3px 4px;
+}
+input:invalid{
+    border: 1px solid rgb(255, 129, 129);
+}
+input:focus{
+    border:none;
+    outline: 2px solid rgb(112, 112, 255);
+    box-shadow: 2px 2px 3px rgb(83, 83, 83);
+}
+
+
+/* footer */
+button {
+    border: 1px solid black;
+    padding: 6px 42px;
+    margin-bottom: 12px;
+    box-shadow: 0.5px 0.5px 2px black;
+    border-radius: 5px;
+}
+a{
+    text-decoration: none;
+}
+a:visited{
+    color:black
+}
+
